--- a/index.html
+++ b/index.html
@@ -175,12 +175,10 @@
                 <div class="info">
                   <h3>Software Enginer</h3>
                   <p>
-                    Alocada em uma squad de experiência, o meu papel é atuar de ponta a ponta desenvolvendo
-                    funcionalidades e features que irão trazer satisfação ao usuário final.<br>
-                    <strong>Tecnologias:</strong> javascript, React, antdesign, storybook, React test libary, Jest,
-                    nodejs, nestjs, docker, terraform, websockets, Jest e
+                    Atuação de ponta a ponta em um sistema interno de atendimento ao cliente desenvolvendo
+                    funcionalidades e features que irão trazer satisfação ao usuário final. Utilizando javascript, 
+                    React, antdesign, storybook, React test libary, Jest, nodejs, nestjs, docker, terraform, websockets, Jest e
                     New Relic.<br>
-                    <strong>Ferramentas:</strong> Jira, bitbucket, Miro, visual Studio code, Figma</p>
                 </div>
               </div>
               <img src="img/arrow-left.svg" class="arrow" alt="Arrow">
@@ -190,8 +188,7 @@
                 <img src="img/actizlogo.jpeg" width="100px" alt="Icone cartão de crédito" class="icon">
                 <div class="info">
                   <h3>Frontend specialized in user experience</h3>
-                  <p>Participação ativa em reuniões para acompanhar percepções e dores dos clientes.
-                    Atuando desde a fase do protótipo com o time de UX até o desenvolvimento.
+                  <p>Atuação ativa desde o protótipo com o time de UX até o desenvolvimento.
                     Utilizávamos adobe XD para criação de layouts e linguagem C#, .Net, html, css e 
                     javascript para desenvolver as soluções.</p>
                 </div>
@@ -204,7 +201,7 @@
                 <div class="info">
                   <h3>User experience design</h3>
                   <p>Desenvolvimento de interfaces de sistemas, aplicativos e dashboards de BI para empresas 
-                    que contratavam os serviços da Mindworks e para produtos internos</p>
+                    que contratavam os serviços da Mindworks e para produtos internos.</p>
                 </div>
               </div>
               <img src="img/arrow-left.svg" class="arrow" alt="Arrow">
