--- a/index.html
+++ b/index.html
@@ -14,31 +14,16 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/main.css">
-
   <title>mikarrega</title>
-  <meta name="title" content="Landing Page NEON - Redesign">
+  <meta name="title" content="Portfólio - mikarrega">
   <meta name="description" content="A conta digital certa pra cuidar bem do seu dinheiro">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://codeboost.com.br/projetos/lp-neon/">
-  <meta property="og:title" content="Landing Page NEON - Redesign">
-  <meta property="og:description" content="A conta digital certa pra cuidar bem do seu dinheiro">
-  <meta property="og:image" content="https://codeboost.com.br/projetos/lp-neon/share-img.jpg">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://codeboost.com.br/projetos/lp-neon/">
-  <meta property="twitter:title" content="Landing Page NEON - Redesign">
-  <meta property="twitter:description" content="A conta digital certa pra cuidar bem do seu dinheiro">
-  <meta property="twitter:image" content="https://codeboost.com.br/projetos/lp-neon/share-img.jpg">
 </head>
 
 <body>
 
   <header>
     <div class="container">
-      <a href="" class="logo" title="Logo NEON">
+      <a href="" class="logo" title="Logo mikarrega">
         <img src="img/mikarregalogo.png" alt="">
       </a>
       <nav>
@@ -143,7 +128,7 @@
       <div class="left-area">
         <div class="mockup">
           <img src="img/circle-mockup.svg" alt="Efeito do mockup" class="circle" data-aos="fade-left">
-          <img src="img/jornadamika.jpeg" width="400px" class="phone" alt="Mockup App Neon" data-aos="flip-left">
+          <img src="img/jornadamika.jpeg" width="400px" class="phone" alt="Foto da mika" data-aos="flip-left">
         </div>
         <!-- <div class="text" data-aos="fade-up">
           <img src="img/icon-neon-xs.svg" class="icon" alt="Icon Neon">
@@ -207,20 +192,8 @@
               <img src="img/arrow-left.svg" class="arrow" alt="Arrow">
             </li>
           </ul>
-          <a href="" class="btn" data-aos="fade-left">Acesse meu currículo completo</a>
+          <a href="https://www.linkedin.com/in/michaeladafne/" target="_blank" class="btn" data-aos="fade-left">Acesse meu currículo completo</a>
         </div>
-        <!-- <div class="box" data-aos="fade-left">
-          <div class="text">
-            <h2>Neon Pejota</h2>
-            <h3>Contas digitais PJ gratuitas para decolar seu negócio!</h3>
-            <p>As melhores contas para fazer pagamentos, compras e receber dos seus clientes.</p>
-            <div class="btns">
-              <a href="" class="btn-primary">Sou <strong>MEI</strong></a>
-              <a href="" class="btn-primary">Sou <strong>ME</strong></a>
-            </div>
-          </div>
-          <img src="img/cartao-neon.png" alt="Cartão NEON" class="image">
-        </div> -->
       </div>
     </div>
   </section>
@@ -234,40 +207,46 @@
       <div class="slide-deposition" data-aos="fade-up">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
+            <a href="https://pokemon-api-rust.vercel.app/" target="_blank">
             <div class="card-deposition">
               <div class="user">
-                <strong>Pokemon API</strong>
-                <img src="img/icon-twitter.svg" alt="">
+                <strong>Pokemon <br> API</strong>
+                <img src="img/pokeapi.png" width="100" alt="">
               </div>
               <p>Projeto de frontend que permite realizar buscas na PokeApi</p>
             </div>
+          </a>
           </div>
           <div class="swiper-slide">
+            <a href="https://banco-neon-landingpage.vercel.app/" target="_blank">
             <div class="card-deposition">
               <div class="user">
-                <strong>Landing Page - Banco Neon</strong>
-                <img src="img/icon-twitter.svg" alt="">
+                <strong>Landing Page <br> Banco Neon</strong>
+                <img src="img/banconeon.png" width="100" alt="">
               </div>
               <p>Lading Page desenvolvida para praticar construção de layouts responsivos e animados</p>
             </div>
+          </a>
           </div>
           <div class="swiper-slide">
             <div class="card-deposition">
               <div class="user">
-                <strong>Busque endereços através do CEP</strong>
-                <img src="img/icon-twitter.svg" alt="">
-              </div>
-              <p>Formulário que realiza buscas de endereços através do CEP informado</p>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="card-deposition">
-              <div class="user">
-                <strong>Clone - Netflix</strong>
-                <img src="img/icon-twitter.svg" alt="">
+                <strong>Netflix <br> Clone</strong>
+                <img src="img/netflix.png" width="100" alt="">
               </div>
               <p>O projeto consulta API e simula filmes ofertados pela Netflix</p>
             </div>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://address-search-form.vercel.app/" target="_blank">
+            <div class="card-deposition">
+              <div class="user">
+                <strong>Busque endereços <br> através do CEP</strong>
+                <img src="img/googlemaps.png" width="40" alt="">
+              </div>
+              <p>Formulário que realiza buscas de endereços através do CEP informado</p>
+            </div>
+          </a>
           </div>
         </div>
       </div>
