--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
           </a>
           </div>
           <div class="swiper-slide">
+            <a href="https://github.com/mikarrega/netflix-clone" target="_blank">
             <div class="card-deposition">
               <div class="user">
                 <strong>Netflix <br> Clone</strong>
@@ -236,6 +237,7 @@
               </div>
               <p>O projeto consulta API e simula filmes ofertados pela Netflix</p>
             </div>
+           </a>
           </div>
           <div class="swiper-slide">
             <a href="https://address-search-form.vercel.app/" target="_blank">
