--- a/index.html
+++ b/index.html
@@ -229,7 +229,6 @@
           </a>
           </div>
           <div class="swiper-slide">
-            <a href="https://github.com/mikarrega/netflix-clone" target="_blank">
             <div class="card-deposition">
               <div class="user">
                 <strong>Netflix <br> Clone</strong>
@@ -237,16 +236,15 @@
               </div>
               <p>O projeto consulta API e simula filmes ofertados pela Netflix</p>
             </div>
-           </a>
           </div>
           <div class="swiper-slide">
             <a href="https://address-search-form.vercel.app/" target="_blank">
             <div class="card-deposition">
               <div class="user">
-                <strong>Busque endereços <br> através do CEP</strong>
-                <img src="img/googlemaps.png" width="40" alt="">
+                <strong>Party Time<br>API RESTful</strong>
+                <img src="img/restAPI.png" width="40" alt="">
               </div>
-              <p>Formulário que realiza buscas de endereços através do CEP informado</p>
+              <p>Com esta API será possível cadastrar festas para realizar um gerenciamento de custo durante os orçamentos.</p>
             </div>
           </a>
           </div>
