--- a/index.html
+++ b/index.html
@@ -218,6 +218,17 @@
           </a>
           </div>
           <div class="swiper-slide">
+            <a href="https://github.com/mikarrega/party-budget-api-rest" target="_blank">
+            <div class="card-deposition">
+              <div class="user">
+                <strong>Party Time<br>API RESTful</strong>
+                <img src="img/restAPI.png" width="100" alt="">
+              </div>
+              <p>API oferece cadastrar festas para realizar gerenciamento de custo de orçamentos.</p>
+            </div>
+          </a>
+          </div>
+          <div class="swiper-slide">
             <a href="https://banco-neon-landingpage.vercel.app/" target="_blank">
             <div class="card-deposition">
               <div class="user">
@@ -236,17 +247,6 @@
               </div>
               <p>O projeto consulta API e simula filmes ofertados pela Netflix</p>
             </div>
-          </div>
-          <div class="swiper-slide">
-            <a href="https://address-search-form.vercel.app/" target="_blank">
-            <div class="card-deposition">
-              <div class="user">
-                <strong>Party Time<br>API RESTful</strong>
-                <img src="img/restAPI.png" width="40" alt="">
-              </div>
-              <p>Com esta API será possível cadastrar festas para realizar um gerenciamento de custo durante os orçamentos.</p>
-            </div>
-          </a>
           </div>
         </div>
       </div>
