update link aws article

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="slide-deposition" data-aos="fade-up">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <a href="" target="_blank">
+            <a href="https://aws.amazon.com/pt/blogs/aws-brasil/veja-como-o-grupo-boticario-tem-enriquecido-as-fichas-de-produto-com-o-uso-de-ia-generativa/" target="_blank">
             <div class="card-deposition">
               <div class="user">
                 <strong>Como o Grupo Boticário tem enriquecido as fichas de produto com o uso de IA generativa</strong>
